apps/archive/crontab-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: crontab-ui
 labels:
   app: crontab-ui
 annotations:
   keel.sh/policy: major
   keel.sh/trigger: poll
   keel.sh/approvals: "1"
   keel.sh/pollSchedule: "@hourly"
spec:
 replicas: 1
 selector:
    matchLabels:
      app: crontab-ui
 template:
   metadata:
     labels:
       app: crontab-ui
   spec:
    containers:
       - name: crontab-ui
         image: alseambusher/crontab-ui:0.3.16
         imagePullPolicy: Always
         ports:
           - containerPort: 8000
         volumeMounts:
           - mountPath: /crontab-ui/crontabs/
             name: config
             subPath: crontab-ui
           - mountPath: /ynab-csv-source/
             name: temp
             subPath: YNAB
    volumes:
      - name: config
        persistentVolumeClaim:
          claimName: local-conf-pvc
      - name: temp
        persistentVolumeClaim:
          claimName: nas-temp-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: crontab-ui-service
spec:
  selector:
    app: crontab-ui
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crontab-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    flame.pawelmalak/type: application
    flame.pawelmalak/name: Crontab-UI
    flame.pawelmalak/url: https://crontab-ui.int.sambaum.ch
    flame.pawelmalak/icon: https://cdn1.iconfinder.com/data/icons/cloud-hosting/32/stopwatch-icon-512.png
spec:
  tls:
  - hosts:
    - "crontab-ui.int.sambaum.ch"
    secretName: crontab-ui-tls
  rules:
  - host: crontab-ui.int.sambaum.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: crontab-ui-service
            port:
              number: 8000
