apps/archive/deluge.yaml
---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: deluge
   labels:
     app: deluge
 spec:
   replicas: 1
   selector:
      matchLabels:
        app: deluge
   template:
     metadata:
       labels:
         app: deluge
       annotations: {
         "cni.projectcalico.org/ipAddrs": "[\"10.1.1.1\"]"
       }
     spec:
      containers:
         - name: deluge
           image: linuxserver/deluge:18.04.1
           ports:
             - containerPort: 8112
           volumeMounts:
             - mountPath: /config
               name: config
               subPath: deluge
             - mountPath: /downloads
               name: deluge-downloads
               subPath: Downloads
             - mountPath: /incomplete-downloads
               name: deluge-incomplete
               subPath: deluge/incomplete-downloads
           env:
           - name: PUID
             value: "0"
           - name: PGID
             value: "0"
           - name: TZ
             value: "Europe/Zurich"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: local-conf-pvc
        - name: deluge-incomplete
          persistentVolumeClaim:
            claimName: local-data-pvc
        - name: deluge-downloads
          persistentVolumeClaim:
            claimName: nas-media-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: deluge-service
spec:
  selector:
    app: deluge
  ports:
  - protocol: TCP
    port: 8112
    targetPort: 8112
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - "deluge.int.sambaum.ch"
    secretName: deluge-tls
  rules:
  - host: deluge.int.sambaum.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deluge-service
            port:
              number: 8112
