apps/archive/heimdall.yaml
---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: heimdall
   labels:
     app: heimdall
 spec:
   replicas: 1
   selector:
      matchLabels:
        app: heimdall
   template:
     metadata:
       labels:
         app: heimdall
     spec:
      containers:
         - name: heimdall
           image: lscr.io/linuxserver/heimdall:2.2.2
           ports:
             - containerPort: 80
           volumeMounts:
             - mountPath: /config
               name: config
               subPath: heimdall
           env:
           - name: TZ
             value: "Europe/Zurich"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: local-conf-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: heimdall-service
spec:
  selector:
    app: heimdall
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ingress
spec:
  rules:
  - host: heimdall.int.sambaum.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: heimdall-service
            port:
              number: 80
  - host: stuff.int.sambaum.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: heimdall-service
            port:
              number: 80
  - host: stuff
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: heimdall-service
            port:
              number: 80
