apps/archive/influxdb.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: influxdb
 labels:
   app: influxdb
 annotations:
   keel.sh/policy: major
   keel.sh/trigger: poll
   keel.sh/approvals: "1"
   keel.sh/pollSchedule: "@hourly"
spec:
 replicas: 1
 selector:
    matchLabels:
      app: influxdb
 template:
   metadata:
     labels:
       app: influxdb
   spec:
    containers:
       - name: influxdb
         image: influxdb:2.1.1
         imagePullPolicy: Always
         ports:
           - containerPort: 8086
         volumeMounts:
           - mountPath: /etc/influxdb2
             name: config
             subPath: influxdb
           - mountPath: /var/lib/influxdb2
             name: data
             subPath: influxdb
    volumes:
      - name: config
        persistentVolumeClaim:
          claimName: local-conf-pvc
      - name: data
        persistentVolumeClaim:
          claimName: local-data-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: influxdb-service
spec:
  selector:
    app: influxdb
  ports:
  - protocol: TCP
    port: 8086
    targetPort: 8086
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influxdb-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - "influxdb.int.sambaum.ch"
    secretName: influxdb-tls
  rules:
  - host: influxdb.int.sambaum.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: influxdb-service
            port:
              number: 8086
