apps/archive/jackett.yml
---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jackett
   labels:
     app: jackett
 spec:
   replicas: 1
   selector:
      matchLabels:
        app: jackett
   template:
     metadata:
       labels:
         app: jackett
     spec:
      containers:
         - name: jackett
           image: linuxserver/jackett:0.19.266
           ports:
             - containerPort: 9117
           volumeMounts:
             - mountPath: /config
               name: config
               subPath: jackett
           env:
           - name: TZ
             value: "Europe/Zurich"
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: local-conf-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: jackett-service
spec:
  selector:
    app: jackett
  ports:
  - protocol: TCP
    port: 9117
    targetPort: 9117
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett-ingress
spec:
  rules:
  - host: jackett.int.sambaum.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jackett-service
            port:
              number: 9117
