apps/archive/nagios.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nagios
 labels:
   app: nagios
 annotations:
   keel.sh/policy: major
   keel.sh/trigger: poll
   keel.sh/approvals: "1"
   keel.sh/pollSchedule: "@hourly"
spec:
 replicas: 1
 selector:
    matchLabels:
      app: nagios
 template:
   metadata:
     labels:
       app: nagios
   spec:
    containers:
       - name: nagios
         image: jasonrivers/nagios:4.4.6
         imagePullPolicy: Always
         ports:
           - containerPort: 80
         # volumeMounts:
         #   - mountPath: /app/data
         #     name: config
         #     subPath: nagios
         # env:
         # - name: TZ
         #   value: "Europe/Zurich"
         # - name: PASSWORD
         #   value: "password"
    volumes:
      - name: config
        persistentVolumeClaim:
          claimName: local-conf-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: nagios-service
spec:
  selector:
    app: nagios
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nagios-ingress
spec:
  rules:
  - host: nagios.int.sambaum.ch
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nagios-service
            port:
              number: 80
